Переделана логика регистрации, теперь есть общая для всех точка входа - Account

--- a/templates/accounts/form.html
+++ b/templates/accounts/form.html
@@ -9,7 +9,7 @@
 <!-- Form section -->
 <form name="registerForm" action="" method="post">
 	{% csrf_token %}
-	{{ form.company }}
+	{{ form }}
 
 	<br>
 	<input class="btn" type="submit" value="Зарегистрировать"><br><br>   
